--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,10 @@
+# Sample workflow for building and deploying a Next.js site to GitHub Pages
+#
+# To get started with Next.js see: https://nextjs.org/docs/getting-started
+#
 name: Deploy Next.js site to Pages
 
 on:
-  # Runs on pushes targeting the main branch
   push:
     branches:
       - main
@@ -68,6 +71,7 @@ jobs:
         with:
           path: ./out
 
+  # Deployment job
   deploy:
     environment:
       name: github-pages
