Update the workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,8 +34,7 @@ jobs:
       - uses: oven-sh/setup-bun@v2
         name: Install bun
         with:
-          version: 10
-          run_install: false
+          bun-version: latest
       - name: Setup Pages
         uses: actions/configure-pages@v5
         with:
